--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cron": "^3.1.6",
     "dayjs": "^1.11.10",
     "ioredis": "^5.3.2",
     "mongoose": "^8.1.3",
+    "node-mailjet": "^6.0.5",
     "reflect-metadata": "0.2.1",
     "rxjs": "^7.8.1"
   },
